src/test/ui/const-generics/generic_arg_infer/issue-91614.stderr
error[E0283]: type annotations needed for `Mask<_, LANES>`
  --> $DIR/issue-91614.rs:6:9
   |
LL |     let y = Mask::<_, _>::splat(false);
   |         ^
   |
   = note: cannot satisfy `_: MaskElement`
note: required by a bound in `Mask::<T, LANES>::splat`
  --> $SRC_DIR/core/src/../../portable-simd/crates/core_simd/src/masks.rs:LL:COL
   |
LL |     T: MaskElement,
   |        ^^^^^^^^^^^ required by this bound in `Mask::<T, LANES>::splat`
help: consider giving `y` an explicit type, where the type for type parameter `T` is specified
   |
LL |     let y: Mask<_, LANES> = Mask::<_, _>::splat(false);
   |          ++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
