src/test/ui/const-generics/generic_arg_infer/issue-91614.rs
#![feature(portable_simd)]
#![feature(generic_arg_infer)]
use std::simd::Mask;

fn main() {
    let y = Mask::<_, _>::splat(false);
    //~^ error: type annotations needed for `Mask<_, {_: usize}>`
}
